# edetect

./: CMakeLists.txt  CudaConvolution2dFilter.hxx  CudaConvolution2dSeparableFilter.cu  CudaConvolution2dSeparableFilter.hxx  CudaDesaturateFilter.hxx  CudaError.cxx  CudaError.hxx  CudaFilter.hxx  CudaFilterPipeline.cxx  CudaFilterPipeline.hxx  CudaGaussianBlurFilter.hxx  CudaImage.cxx  CudaIntFloatFilter.cu  CudaIntFloatFilter.hxx  CudaKirschOperatorFilter.cu  CudaSobelOperatorFilter.cu  CudaSobelOperatorFilter.hxx  common.hxx  kirsch.cxx  sobel.cxx
include/: Image.hxx  ImageBackend.hxx  ImageFilter.hxx  ImageFilterBuilder.hxx
src/edetect/: CMakeLists.txt  CudaConvolution2dFilter.cu  CudaDesaturateFilter.cu  CudaGaussianBlurFilter.cxx  CudaImage.hxx  CudaKirschOperatorFilter.hxx  DerivativeOfGaussianFilter.hxx  DerivativeOfGaussianFilter.txx  GaussianBlurFilter.hxx  GaussianBlurFilter.txx  GaussianKernel.cxx  GaussianKernel.hxx  GeneratedKernelFilter.hxx  GeneratedKernelFilter.txx  IConvolution2dFilter.cxx  IConvolution2dFilter.hxx  IConvolution2dSeparableFilter.cxx  IConvolution2dSeparableFilter.hxx  IConvolutionFilter.cxx  IConvolutionFilter.hxx  IDesaturateFilter.cxx  IDesaturateFilter.hxx  IDualInputFilter.cxx  IDualInputFilter.hxx  IEuclideanNormFilter.cxx  IEuclideanNormFilter.hxx  IGeneratedKernelFilter.hxx  IGeneratedKernelFilter.txx  IImage.hxx  IImage.ixx  IImageBackend.cxx  IImageBackend.hxx  IImageFilter.hxx  IImageFilter.ixx  IImageFilterBuilder.hxx  IIntFloatFilter.cxx  IIntFloatFilter.hxx  IKirschOperatorFilter.cxx  IKirschOperatorFilter.hxx  IKirschOperatorFilter.txx  (+28 more)
src/edetect-proc/: CMakeLists.txt  ImageFilterPipeline.cxx  ImageFilterPipeline.hxx  edetect-proc.cxx  edetect-proc.hxx  gauss.cxx  kirsch.cxx  sobel.cxx
src/edetect/cpu/: CpuBackend.cxx  CpuBackend.hxx  CpuConvolution2dFilter.cxx  CpuConvolution2dFilter.hxx  CpuConvolution2dSeparableFilter.cxx  CpuConvolution2dSeparableFilter.hxx  CpuConvolutionFilter.cxx  CpuConvolutionFilter.hxx  CpuDesaturateFilter.cxx  CpuDesaturateFilter.hxx  CpuDualInputTimerFilter.cxx  CpuDualInputTimerFilter.hxx  CpuEuclideanNormFilter.cxx  CpuEuclideanNormFilter.hxx  CpuHysteresisFilter.cxx  CpuHysteresisFilter.hxx  CpuImage.cxx  CpuImage.hxx  CpuIntFloatFilter.cxx  CpuIntFloatFilter.hxx  CpuInvertFilter.cxx  CpuInvertFilter.hxx  CpuKirschOperatorFilter.cxx  CpuKirschOperatorFilter.hxx  CpuMarrHildrethOperatorFilter.cxx  CpuMarrHildrethOperatorFilter.hxx  CpuMultiplyFilter.cxx  CpuMultiplyFilter.hxx  CpuNonmaxSuppressionFilter.cxx  CpuNonmaxSuppressionFilter.hxx  CpuSobelOperatorFilter.cxx  CpuSobelOperatorFilter.hxx  CpuTimerFilter.cxx  CpuTimerFilter.hxx  CpuZeroCrossFilter.cxx  CpuZeroCrossFilter.hxx
src/edetect/cuda/: CudaBackend.cxx  CudaBackend.hxx  CudaConvolution2dFilter.cu  CudaConvolution2dFilter.hxx  CudaConvolution2dSeparableFilter.cu  CudaConvolution2dSeparableFilter.hxx  CudaConvolutionFilter.cu  CudaConvolutionFilter.hxx  CudaDesaturateFilter.cu  CudaDesaturateFilter.hxx  CudaDualInputTimerFilter.cxx  CudaDualInputTimerFilter.hxx  CudaError.cxx  CudaError.hxx  CudaEuclideanNormFilter.cu  CudaEuclideanNormFilter.hxx  CudaFilter.hxx  CudaGaussianBlurFilter.cxx  CudaGaussianBlurFilter.hxx  CudaHysteresisFilter.cu  CudaHysteresisFilter.hxx  CudaImage.cxx  CudaImage.hxx  CudaIntFloatFilter.cu  CudaIntFloatFilter.hxx  CudaInvertFilter.cu  CudaInvertFilter.hxx  CudaKirschOperatorFilter.cu  CudaKirschOperatorFilter.hxx  CudaMarrHildrethOperatorFilter.cu  CudaMarrHildrethOperatorFilter.hxx  CudaMultiplyFilter.cu  CudaMultiplyFilter.hxx  CudaNonmaxSuppressionFilter.cu  CudaNonmaxSuppressionFilter.hxx  CudaRingBuffer.cuh  CudaRingBuffer.cut  CudaSobelOperatorFilter.cu  CudaSobelOperatorFilter.hxx  CudaTimerFilter.cxx  (+3 more)
src/edetect/filters/: GaussianKernel.cxx  GaussianKernel.hxx  GeneratedKernelFilter.hxx  IConvolutionFilter.cxx  IConvolutionFilter.hxx  IDesaturateFilter.cxx  IDesaturateFilter.hxx  IDualInputFilter.cxx  IDualInputFilter.hxx  IDualInputTimerFilter.cxx  IDualInputTimerFilter.hxx  IEuclideanNormFilter.cxx  IEuclideanNormFilter.hxx  IHysteresisFilter.cxx  IHysteresisFilter.hxx  IIntFloatFilter.cxx  IIntFloatFilter.hxx  IInvertFilter.cxx  IInvertFilter.hxx  IKirschOperatorFilter.cxx  IKirschOperatorFilter.hxx  IMultiplyFilter.cxx  IMultiplyFilter.hxx  INonmaxSuppressionFilter.cxx  INonmaxSuppressionFilter.hxx  ITimerFilter.cxx  ITimerFilter.hxx  IZeroCrossFilter.cxx  IZeroCrossFilter.hxx  SeparableConvolutionFilter.cxx  SeparableConvolutionFilter.hxx
